Sat Nov 14 04:07:06 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb (TkVariable::coerce): fix bug on a
	  numeric value.

Sat Nov 14 03:35:29 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb: TkVariable#*(other) and /(other) have a
	  bug on handling of the "other" value.

Thu Nov 12 23:38:47 2009  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi.rb: fix command-line option of
	  non-interactive terminal. [ruby-core:23016]

Mon Nov  9 11:38:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (clean-ext): get rid of failure.

	* configure.in (warnflags): add -Wno-long-long.

Mon Nov  9 01:55:10 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* eval.c (method_inspect, method_name, mnew): Bug fix when
	  method created from an alias.
	  Based on a patch by Peter Vanbroekhoven [ruby-core:22040]

Fri Nov  6 17:13:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_header): split the line by tabs.

Fri Nov  6 11:01:34 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (call_trace_func): remove the trace hook if any exception
	  raised.  [ruby-list:46515]

Fri Nov  6 10:56:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (get_event_name): added thread events.

Sun Feb 15 03:50:21 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* hash.c (rb_hash): always return a fixnum value because a return
	  value of rb_hash may be used as a hash value itself and bignums have
	  no unique VALUE.

	* test/ruby/test_hash.rb: add a test for above.

Thu Nov  5 12:06:35 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (args): use splat_array.
	  fix: when *foo doesn't splat. [ruby-list:46517]

Thu Nov  5 11:31:23 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (CreateChild): allocate temporary buffer and use it
	  instead of directly modify the passed string.  [ruby-dev:39635]

Sat Oct 31 17:20:58 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
